<Setup simple main handlebars layout and created a first attempt of the homepage view render to 5 most recent posts>

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <header>
+    <nav class="flex">
+      <p>Home</p>
+      <p>Dashboard</p>
+      <p>Logout</Logout>
+    </nav>
+    <h1>The Tech Blog</h1>
+  </header>
+{{{ body }}}
 </body>
+<footer>
+
+</footer>
 
 </html>
