<Logging in with seeded users is working, still working on logging out>

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- Loop over each post in the posts array -->
 {{#each posts as |post| }}
 <div class="">
-  <div class="flex">
+  <div class="flex post">
     <h2>
       <a href="/posts/{{post.id}}">{{post.title}}</a>
     </h2>
