--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 .flex {
     display: flex;
-};
-
-.wrap {
-    flex-wrap: wrap;
 }
 
-nav p {
+.post {
+    justify-content: space-between;
+}
+
+nav p, nav a {
     margin: 5px;
-};
+}
