--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,19 @@
 <body>
   <header>
     <nav class="flex">
-      <p>Home</p>
-      <p>Dashboard</p>
-      <p>Logout</Logout>
+      <p><a href="/">Home</a></p>
+      <p><a href="/dashboard">Dashboard</a></p>
+       {{#if logged_in}}
+        <p><a href="/logout">Logout</a></p>
+        {{else}}
+        <p><a href="/login">Login</a></p>
+        {{/if}}
     </nav>
-    <h1>The Tech Blog</h1>
+      {{#if dashboard}}
+        <h1>Dashboard</h1>
+        {{else}}
+        <h1>The Tech Blog</h1>
+        {{/if}}
   </header>
 {{{ body }}}
 </body>
