--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
       <p><a href="/">Home</a></p>
       <p><a href="/dashboard">Dashboard</a></p>
        {{#if logged_in}}
-        <p><a href="/logout">Logout</a></p>
+        <p><a href="/logout" id="logout">Logout</a></p>
         {{else}}
         <p><a href="/login">Login</a></p>
         {{/if}}
@@ -27,9 +27,12 @@
         {{/if}}
   </header>
 {{{ body }}}
+
 </body>
 <footer>
-
+ {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </footer>
 
 </html>
