--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
 <div class="">
   <div class="flex post">
     <h2>
-      <a href="/posts/{{post.id}}">{{post.title}}</a>
+      <a href="posts/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Posted by {{post.user.username}} on {{format_date post.date_created}} </p>
   </div>
