--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
       <p><a href="/">Home</a></p>
       <p><a href="/dashboard">Dashboard</a></p>
        {{#if logged_in}}
-        <p><a href="/logout" id="logout">Logout</a></p>
+        <p><a href="/api/users/logout" id="logout">Logout</a></p>
         {{else}}
         <p><a href="/login">Login</a></p>
         {{/if}}
