--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,16 @@
     justify-content: space-between;
 }
 
+.dashboard {
+    background: lightgrey;
+    border-radius: 10px;
+    margin: 3px;
+}
+
+.center {
+    justify-content: center;
+}
+
 nav p, nav a {
     margin: 5px;
 }
