<View for new post has been created and logic has been worked out to create a new post including the API route>

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
 <div class="">
     <div class="flex post dashboard">
         <h2>
-            <a href="posts/{{post.id}}">{{post.title}}</a>
+            <a href="dashboard/update/{{post.id}}">{{post.title}}</a>
         </h2>
         <p>{{format_date post.date_created}}</p>
     </div>
