<Finished views, logic, and routes for updating and deleting posts>

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -24,7 +24,7 @@
 <h3>Comments</h3>
 <p><a href="/login">Login</a> to post comments</p>
 {{/if}}
-<!-- Loop over each post in the posts array -->
+<!-- Loop over each comment in the comments array -->
 {{#each comments as |comment| }}
 <div class="comment">
     <p>{{comment.content}}</p>
