<Update homeroute for post that allows a user to navigate to their post from their if it is their own to update it>

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,10 @@
 <div class="">
     <div class="flex post">
+        {{#if user}}
+        <a href="/dashboard/update/{{post.id}}"><h2>{{post.title}}</h2></a>
+        {{else}}
         <h2>{{post.title}}</h2>
+        {{/if}}
         <p>Posted by {{post.user.username}} on {{format_date post.date_created}} </p>
     </div>
     <div class="">
