<Centered posted by and date created text>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,12 @@
 
 .post {
     justify-content: space-between;
+    align-items: center;
+}
+
+.post p {
+    margin-bottom: 0px;
+    margin-right: 5px;
 }
 
 .dashboard {
