--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <!-- Loop over each post in the posts array -->
 {{#each posts as |post| }}
-<div class="">
+<div>
     <div class="flex post dashboard">
         <h2>
             <a href="dashboard/update/{{post.id}}">{{post.title}}</a>
