--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,13 @@
 <!-- Loop over each post in the posts array -->
 {{#each posts as |post| }}
-<div class="">
+<div>
   <div class="flex post">
     <h2>
       <a href="posts/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Posted by {{post.user.username}} on {{format_date post.date_created}} </p>
   </div>
-  <div class="">
+  <div>
     <p>{{post.content}}</p>
   </div>
 </div>
