--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="">
+<div>
   <h2>Login</h2>
 
   <form class="form login-form">
@@ -14,7 +14,7 @@
       <button class="btn btn-primary" type="submit">Login</button>
     </div>
   </form>
-  <div class="">
+  <div>
     <p><a href="/signup">Sign up instead</a></p>
   </div>
 </div>
