--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,4 +1,4 @@
-<div class="">
+<div>
     <h2>Edit Post</h2>
     <form class="form update-form">
         <input type="hidden" id="post_id" name="post_id" value="{{post.id}}">
